Fix overflowing tags

--- a/src/client/components/tag.scss
+++ b/src/client/components/tag.scss
@@ -6,8 +6,11 @@
   display: inline-block;
   border-radius: 3px;
   margin-right: 5px;
+  margin-bottom: 5px;
   cursor: pointer;
   transition-duration: $hover-fade-duration;
+  box-sizing: border-box;
+  max-width: 100%;
 
   &.system-tag {
     background-color: rgba(113, 128, 148, 0.65);
@@ -27,5 +30,8 @@
     color: white;
     font-family: 'Inconsolata', monospace;
     font-size: 14px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 }
