--- a/src/client/components/torrent_list/torrent_list_entry.scss
+++ b/src/client/components/torrent_list/torrent_list_entry.scss
@@ -61,7 +61,7 @@ $torrent-list-entry-color: #272626;
 
 
   .tag-list {
-    margin: 16px 0;
+    margin: 16px 0 11px 0;
   }
 
   .triangle {
